fixed placeholder text is too big when use on phone

--- a/style.css
+++ b/style.css
@@ -137,8 +137,8 @@ ul{
 /* -----postAPI----- */
 
 form{
-    padding: 20px;
-    text-align: center;
+    padding-right: 20px;
+    text-align: left;
 }
 
 .input_placeholder{
@@ -194,6 +194,10 @@ form{
     }
     body{
         justify-content: center;
+    }
+    .input_placeholder{ 
+        font-size: 16px;
+        width: 80%;
     }
 }
 
